fix: add wrap for flex

--- a/ng-ueqt/src/styles/flex/index.scss
+++ b/ng-ueqt/src/styles/flex/index.scss
@@ -10,6 +10,7 @@
         // Prevent columns from collapsing when empty
         min-height: 1px;
         max-height: 100%;
+        flex-wrap: wrap;
     }
     .u-flex-has-gap-children>* {
         box-sizing: border-box;
